[project]
name = "Livenodes-Qt"
dynamic = ['version']
description = "LiveNodes: node based live streaming sensor/data and visualization suite."
authors = [
    { name = "Yale Hartmann", email = "yale.hartmann@uni-bremen.de" }
]
# TODO: figure out how/if to add livenodes here... for now install manually in venv via:
# pip install . --extra-index-url https://package_puller:8qYs4hBAsmAHJ5AdS_y9@gitlab.csl.uni-bremen.de/api/v4/groups/368/-/packages/pypi/simple
# pip install -e . --extra-index-url https://package_puller:8qYs4hBAsmAHJ5AdS_y9@gitlab.csl.uni-bremen.de/api/v4/groups/368/-/packages/pypi/simple
dependencies = [
    "livenodes>=0.9.1",
    "livenodes-core-nodes>=0.9.1",
    "numpy>=1.22.1",
    "PyQt5>=5.12.3",

    "setuptools>=60.0.0, <67"
]
# setuptools version is specified due to a problem in livenodes (presumably phx-class-registry), which causes an deprectation error
# Implementing implicit namespace packages (as specified in PEP 420) is preferred to `pkg_resources.declare_namespace`. See https://setuptools.pypa.io/en/latest/references/keywords.html#keyword-namespace-packages
# FIX upstream and remove here

[project.entry-points."livenodes.nodes"]
annotate_ui_button = "livenodes_qt.annotate_ui_button:Annotate_ui_button"
print_data = "livenodes_qt.print_data:Print_data"
video_playback = "livenodes_qt.video_playback:Video_Playback"
video_render = "livenodes_qt.video_render:Video_Render"


[project.optional-dependencies]
dev = [
    "tox",
    "pytest>=7.0.1"
]

[build-system]
requires = [
    "setuptools>=48",
    "wheel",
    "setuptools_scm >= 2.0.0, <3",
    "setuptools-git-versioning"
]
build-backend = 'setuptools.build_meta'

[tool.setuptools-git-versioning]
enabled = true

[tool.black]
line-length = 140
target-version = ['py36']
skip-string-normalization = true